<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    tools:context=".Pantalla2">

    <Button
        android:id="@+id/ButtonAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Anterior"
        android:text="@string/anterior"
        app:backgroundTint="#4A4949"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:background="#000000"
        android:text="@string/delta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="107dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:background="#090909"
        android:text="@string/externa"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="140dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:background="#000000"
        android:text="@string/tangente"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:background="#090909"
        android:text="@string/flecha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:background="#090909"
        android:text="@string/g_curvatura"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="143dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:background="#090909"
        android:text="@string/long_curva"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:background="#090909"
        android:text="@string/c_larga"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:background="#050505"
        android:text="@string/radio"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/RADIO"
        android:layout_width="222dp"
        android:layout_height="27dp"
        android:background="#595555"
        android:ems="10"
        android:hint="@string/R"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#F1F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toEndOf="@+id/ButtonAnterior"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="btnCalcular"
        android:text="@string/CALCULAR"
        app:backgroundTint="#535151"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RADIO" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="149dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/ButtonAnterior"
        app:srcCompat="@drawable/logo_negro" />

    <EditText
        android:id="@+id/GRADOS"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:background="#615E5E"
        android:ems="10"
        android:hint="   GG"
        android:inputType="numberSigned"
        android:textColor="#F6F1F1"
        android:textColorHint="#E6E2E2"
        app:layout_constraintBottom_toTopOf="@+id/RADIO"
        app:layout_constraintEnd_toStartOf="@+id/MINUTOS"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MINUTOS"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:background="#615E5E"
        android:ems="10"
        android:hint="  MM"
        android:inputType="numberSigned"
        android:textColor="#F6F1F1"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/RADIO"
        app:layout_constraintEnd_toStartOf="@+id/SEGUNDOS"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SEGUNDOS"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:background="#615E5E"
        android:ems="10"
        android:hint="  SS"
        android:inputType="numberSigned"
        android:textColor="#F6F1F1"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/RADIO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TAN"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/CLAR"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/EXTERNA"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/FLECHA"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/GCUR"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/LONGC"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#787070"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="0.663" />

</androidx.constraintlayout.widget.ConstraintLayout>